<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="header_sign_in">Sign In</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sing_in_with_google">Sing in with Google</string>
    <string name="sing_in_with_apple">Sing In with Apple</string>
</resources>