<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignInFragment">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:fontFamily="@font/montserrat_semibold_600"
        android:text="@string/header_sign_in"
        android:textColor="@color/header_text"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/montserrat_medium_500"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColorHint="@color/placeholder_silver"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />


    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/montserrat_medium_500"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textColorHint="@color/placeholder_silver"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/inputFirstName"
        app:layout_constraintStart_toStartOf="@+id/inputFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstName" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/montserrat_medium_500"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/placeholder_silver"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/inputLastName"
        app:layout_constraintStart_toStartOf="@+id/inputLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputLastName" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/btn_blue"
        android:fontFamily="@font/montserrat_bold_700"
        android:text="@string/header_sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_an_account"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/log_in"
        android:textColor="@color/btn_blue"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvAccount"
        app:layout_constraintStart_toEndOf="@id/tvAccount"
        app:layout_constraintTop_toTopOf="@+id/tvAccount"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/btnLoginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        android:drawablePadding="7dp"
        android:fontFamily="@font/montserrat_medium_500"
        android:gravity="center"
        android:text="@string/sing_in_with_google"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginApple"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/btnLoginApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat_medium_500"
        android:gravity="center"
        android:text="@string/sing_in_with_apple"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>